# hurdy-gurdy

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BENCHMARKING.md  BENCHMARKS.md  DESIGN_c_to_btor2_chain.md  DESIGN_certificate_module_sharing.md  DESIGN_generalized_pairs.md  DESIGN_pair_taxonomy.md  DESIGN_world_model_loop.md  DISCOVERY.md  DOCKER.md  DOCKERHUB.md  DOMAINS.md  Dockerfile  FRAMEWORK.md  FRONTIER-PLAN.md  FRONTIER.md  HANDOFF.md  HANDOFF_wire_sail.md  INTERFACE.md  PAIRING.md  PATHS.md  PLAN-CONCOLIC-CANDIDATES.md  PLAN-NATIVE-CONCOLIC.md  PLAN.md  POPL2027_RELEASE.md  POTENTIAL.md  PROVING.md  README.md  REGISTRY.md  ROADMAP.md  ROUTES.md  SCALING.md  SOLVERS.md  SYNTHESIS.md  V2_AGENT_LOOP.md  V2_AUDIT.md  V2_BOOTSTRAP.md  (+3 more)
agents/: budget.yaml
benchmarks/: README.md  hwmcc-sosylab-beem.json
ci/: pair-gate.yml
examples/: 01_compile_basic.py  02_dispatch_z3bmc.py  03_introspect_annotation.py  04_describe_schema.py  05_layer_reuse.py  06_interpreter_workflow.py  07_partial_binding.py  08_propose_check_loop.py
gate/: btor2_z3.py  independence.py  merge_policy.py  own_btor2_check.py  run_gate.py
gurdy/: __init__.py  cli.py  mcp.py
languages/: README.md
pairs/: README.md
paper/: .gitignore  Makefile  README.md  arxiv.tex  check_crosswalk.py  comment.cut  macros.tex  main.tex  references.bib
registry/: riscv_btor2.yaml
schemas/: model_registration.schema.json  registration.schema.json
scripts/: check_links.py  explainer_video.py  install-esbmc.sh  install-pono.sh  make_anon_artifact.py
tests/: conftest.py  test_aarch64_btor2_pair.py  test_aarch64_sail_pair.py  test_abstraction_bench.py  test_additivity.py  test_autonomy.py  test_btor2_constraint.py  test_btor2_havoc_pair.py  test_btor2_interp.py  test_btor2_negated_refs.py  test_btor2_smtlib.py  test_btor2_smtlib_depth.py  test_btor2_smtlib_inventory.py  test_btor2_witness.py  test_builder_dispatch.py  test_c_riscv.py  test_c_riscv_differential.py  test_common_mode_gate.py  test_constraint_corpus.py  test_cost_calibration.py  test_costs_and_route_report.py  test_coverage.py  test_crn_interp.py  test_crn_smtlib.py  test_csmith_differential.py  test_demand_ledger.py  test_direction.py  test_disjoint_decision.py  test_ebpf_btor2_pair.py  test_ebpf_interp.py  test_evm_btor2_pair.py  test_examples.py  test_fault_injection.py  test_framework_mvp1.py  test_frontier_loop.py  test_frontier_saturation.py  test_frontier_valve.py  test_fuzz_differential.py  test_havoc_player.py  test_mcp_server.py  (+43 more)
tools/: __init__.py  abstraction_bench.py  additivity.py  autonomy.py  builder_dispatch.py  closure_calibration.py  common_mode_gate.py  constraint_corpus.py  cost_calibration.py  csmith_fuzz.py  fault_injection.py  frontier_loop.py  havoc_player.py  mandate.py  merge_queue.py  pin_family.py  pono_player.py  pr_manifest.py  procedure_dispatch.py  provenance.py  question_campaign.py  riscv_bench.py  riscv_fuzz.py  riscv_slice.py  route_grader.py  saturation_report.py  scout.py  shadow_ledger.py  solver_gate.py
v3/: HANDOFF_wire_sail.md  README.md  cli.py
(+3421 files in other folders)
