[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hurdy-gurdy"
version = "0.2.0.dev0"
description = "A platform for building deterministic translations from source languages to reasoning languages."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "hurdy-gurdy contributors" }]
keywords = ["verification", "smt", "btor2", "riscv", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7", "z3-solver"]
riscv-btor2 = []
solvers-z3 = ["z3-solver"]
solvers-bitwuzla = ["bitwuzla"]
solvers-cvc5 = ["cvc5"]
solvers-pono = []  # pono is invoked as a subprocess binary; no Python pkg
solvers-all = ["z3-solver", "bitwuzla", "cvc5"]
dev = ["pytest>=7", "z3-solver"]

[project.scripts]
gurdy = "gurdy.core.cli:main"

[tool.setuptools.packages.find]
include = ["gurdy*"]

[tool.setuptools.package-data]
"gurdy.pairs.riscv_btor2" = ["SCHEMA.md"]
"gurdy.pairs.ebpf_btor2" = ["SCHEMA.md"]
"gurdy.pairs.btor2_smtlib" = ["SCHEMA.md"]
"gurdy.pairs.crn_smtlib" = ["SCHEMA.md"]
"gurdy.hops.c_riscv" = ["CONTRACT.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
